--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,11 +17,18 @@ jobs:
           plugin_code: yes
           plugin_code_languages: typescript, zig
           plugin_code_load: 400
-  lang:
+
+  issue_pr_lang:
     runs-on: ubuntu-latest
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          filename: issue_pr_lang.svg
+          token: ${{ secrets.METRICS_SECRET }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          user: ellisonleao
+          template: classic
+          base: ""
+          config_timezone: America/Sao_Paulo
+          plugin_followup: yes
           plugin_languages: yes
-          plugin_languages_indepth: yes
-          commits_authoring: firstname lastname, username, username@users.noreply.github.com
