--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -61,4 +61,5 @@ jobs:
           plugin_notable_from: organization
           plugin_notable_types: commit
           plugin_repositories: yes
+          plugin_repositories_featured: zeon
           plugin_repositories_order: featured, pinned, starred, random
